--- a/src/App.scss
+++ b/src/App.scss
@@ -7,9 +7,61 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
+  background:  rgb(131,58,180);  /* fallback for old browsers */
+  background: -webkit-linear-gradient(325deg, rgba(170, 218, 255, 1) 0%, rgba(187, 169, 243, 1) 50%, rgba(213, 107, 224, 1));  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(325deg, rgba(170, 218, 255, 1) 0%, rgba(187, 169, 243, 1) 50%, rgba(213, 107, 224, 1)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  height: 100vh;
 }
 
 a {
   color: #333;
   text-decoration: none;
+}
+
+.App {
+  .container {
+    max-width: 800px;
+  
+    .TodoList, .AddTodo {
+      margin-top: 40px;
+      border-radius: 16px;
+      background-color: #f4f4f4;
+    }
+
+    .TodoList {
+      padding: 16px 0px 40px 0px;
+      position: relative;
+
+      .AddTodoBtn{
+        position: absolute;
+        bottom: -27px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        
+        button {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          border: none;
+          background-color: #8554FF;
+          border-radius: 50%;
+          padding: 10px;
+          color: #fff;
+          font-size: 32px;
+          transition: 0.3s;
+
+          &:hover {
+            background-color: #422A80;
+            transition: 0.3s;
+          }
+        }
+      }
+    }
+
+    .AddTodo {
+      padding: 24px;
+    }
+  }
 }
