--- a/src/components/TodoComponents.scss
+++ b/src/components/TodoComponents.scss
@@ -2,23 +2,121 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
-    background-color: #f4f4f4;
-    padding: 10px;
+    padding: 8px 0px;
+    margin: 0 24px;
     border-bottom: 1px #ccc solid;
-    
     p {
         margin: 0;
 
-        input{
-            margin-right: 8px;
+        label {
+            margin-bottom: 0;
+
+            span {
+                margin-left: 4px;
+            }
         }
+           
+        /*input[type="checkbox"] {
+            position: absolute;
+            opacity: 0;
+            z-index: -1;
+            margin-right: 8px;
+
+            &+span {
+                font: 16pt sans-serif;
+                color: #000;
+
+                &:before {
+                    font: 16pt FontAwesome;
+                    content: '\00f096';
+                    display: inline-block;
+                    width: 16pt;
+                    padding: 2px 0 0 3px;
+                    margin-right: 0.5em;
+                }
+            }
+
+            &:checked+span:before {
+                content: '\00f046'
+            }
+
+            &:focus+span:before {
+                outline: 1px dotted #aaa;
+            }
+        }*/
     }
 
     button {
-        background-color: #ff0000;
-        color: #fff;
         border: none;
-        padding: 5px 13px;
-        border-radius: 50px;
+        .icon {
+            font-size: 32px;
+            color: #333;
+            border: none;
+        }
+
+        .iconNotHover {
+            display: inline;
+        }
+
+        .iconHover {
+            display: none;
+        }
+
+        &:hover {
+            .iconNotHover {
+                display: none;
+            }
+
+            .iconHover {
+                display: inline;
+            }
+        }
+    }
+}
+
+.AddTodoForm {
+    .AddTodoInput {
+        display: grid;
+        margin: 0 0 16px 0;
+
+        label {
+            color: #827582;
+            font-weight: bold;
+            margin-bottom: 0;
+        }
+
+        input {
+            border: 1px solid #D4D4D4;
+            border-radius: 5px;
+            padding: 4px 0;
+        }
+    }
+    
+    .btnSubmit {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        
+        button {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            border: none;
+            background-color: #8554FF;
+            border-radius: 5px;
+            padding: 10px;
+            color: #fff;
+            transition: 0.3s;
+            
+            &:hover {
+                background-color: #422A80;
+                transition: 0.3s;
+            }
+            
+            svg {
+                margin-left: 8px;
+                font-size: 24px;
+            }
+        }
     }
 }
