--- a/src/App.scss
+++ b/src/App.scss
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+h2 {
+  font-size: 1.8rem !important;
+}
+
 body {
   font-family: Arial, Helvetica, sans-serif;
   line-height: 1.4;
