--- a/src/components/TodoComponents.scss
+++ b/src/components/TodoComponents.scss
@@ -48,6 +48,7 @@
 
     button {
         border: none;
+        background-color: transparent;
         .icon {
             font-size: 32px;
             color: #333;
@@ -73,49 +74,56 @@
         }
     }
 }
+.AddTodoList {
 
-.AddTodoForm {
-    .AddTodoInput {
-        display: grid;
-        margin: 0 0 16px 0;
-
-        label {
-            color: #827582;
-            font-weight: bold;
-            margin-bottom: 0;
-        }
-
-        input {
-            border: 1px solid #D4D4D4;
-            border-radius: 5px;
-            padding: 4px 0;
-        }
+    h2 {
+        color: #544C54;
+        text-align: center;
     }
-    
-    .btnSubmit {
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        
-        button {
+
+    .AddTodoForm {
+        .AddTodoInput {
+            display: grid;
+            margin: 0 0 16px 0;
+            
+            label {
+                color: #544C54;
+                font-weight: 600;
+                margin-bottom: 0;
+            }
+            
+            input {
+                border: 1px solid #D4D4D4;
+                border-radius: 5px;
+                padding: 4px 0;
+            }
+        }
+
+        .btnSubmit {
             display: flex;
             align-items: center;
             justify-content: center;
-            border: none;
-            background-color: #8554FF;
-            border-radius: 5px;
-            padding: 10px;
-            color: #fff;
-            transition: 0.3s;
             
-            &:hover {
-                background-color: #422A80;
+            button {
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                border: none;
+                background-color: #8554FF;
+                border-radius: 5px;
+                padding: 10px;
+                color: #fff;
                 transition: 0.3s;
-            }
-            
-            svg {
-                margin-left: 8px;
-                font-size: 24px;
+                
+                    &:hover {
+                    background-color: #422A80;
+                    transition: 0.3s;
+                }
+                
+                svg {
+                    margin-left: 8px;
+                    font-size: 24px;
+                }
             }
         }
     }
