--- a/src/styling/appStyle.scss
+++ b/src/styling/appStyle.scss
@@ -4,6 +4,10 @@
   padding: 0;
 }
 
+h1 {
+  font-size: 2rem !important;
+}
+
 h2 {
   font-size: 1.8rem !important;
 }
@@ -15,6 +19,7 @@ body {
   background: -webkit-linear-gradient(325deg, rgba(170, 218, 255, 1) 0%, rgba(187, 169, 243, 1) 50%, rgba(213, 107, 224, 1));  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(325deg, rgba(170, 218, 255, 1) 0%, rgba(187, 169, 243, 1) 50%, rgba(213, 107, 224, 1)); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   height: 100vh;
+  overflow-y: overlay;
 }
 
 a {
@@ -27,7 +32,6 @@ a {
     max-width: 800px;
   
     .TodoList, .AddTodo {
-      margin-top: 40px;
       border-radius: 16px;
       background-color: #f4f4f4;
     }
@@ -49,7 +53,7 @@ a {
           align-items: center;
           justify-content: center;
           border: none;
-          background-color: #8554FF;
+          background-color: #422A80;
           border-radius: 50%;
           padding: 10px;
           color: #fff;
@@ -57,7 +61,7 @@ a {
           transition: 0.3s;
 
           &:hover {
-            background-color: #422A80;
+            background-color: #8554FF;
             transition: 0.3s;
           }
         }
@@ -66,6 +70,8 @@ a {
 
     .AddTodo {
       padding: 24px;
+      margin-top: 40px;
+      margin-bottom: 40px;
     }
   }
 }
